# videoaudiosync

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/: auth.py  cli.py  config.py  db.py  events.py  main.py  models.py  queue.py
app/api/: auth_routes.py  jobs_routes.py
app/pipeline/: ass.py  energy.py  extract.py  ffmpeg_util.py  orchestrator.py  render_edit.py  render_quick.py  sync.py
deploy/: deploy.sh  nginx-vhost.conf  nginx.conf
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.workspace.ts
frontend/public/: loop-glitch-probe.worklet.js
frontend/scripts/: bench-loop-glitch.mjs  bench-loop.mjs  bench-press-to-paint.mjs  bench-real-music.mjs  copy-runtime-assets.mjs  diagnose-beat-drift.mjs  diagnose-cut-vs-beat.mjs  e2e-full.mjs  e2e.mjs  gen-test-fixtures.sh  probe-rotation.mjs  readme-screenshots.mjs  (+3 more)
frontend/wasm/sync-core/: Cargo.toml
frontend/wasm/sync-core/bench/: README.md  corpus.tsv  fetch_corpus.sh
frontend/wasm/sync-core/examples/: bench_real_music.rs  bench_sync.rs
frontend/wasm/sync-core/src/: chroma.rs  drift.rs  dtw.rs  lib.rs  ncc.rs  onset.rs  phat.rs  sync.rs  util.rs  xcorr.rs
tests/: conftest.py  test_api_auth.py  test_api_jobs.py  test_api_raw_media.py  test_ass_generator.py  test_edit_render_integration.py  test_energy.py  test_extract.py  test_ffmpeg_util.py  test_orchestrator_integration.py  test_queue_progress.py  test_sync.py
(+278 files in other folders)
