[package]
name = "sync-core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Audio-sync algorithm (chroma cross-correlation + DTW + drift refinement) compiled to WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
realfft = "3.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
